// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IstioComponentStatus renders error icon when core component is not found 1`] = `
<Split
  hasGutter={true}
  key="cell-status-icon-isito-ingress"
>
  <SplitItem>
    <ExclamationCircleIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      style={
        Object {
          "color": "var(--pf-global--danger-color--100)",
          "marginTop": 5,
        }
      }
    />
  </SplitItem>
  <SplitItem
    isFilled={true}
  >
    isito-ingress
  </SplitItem>
  <SplitItem>
    Not found
  </SplitItem>
</Split>
`;

exports[`IstioComponentStatus renders error icon when core component is not running 1`] = `
<Split
  hasGutter={true}
  key="cell-status-icon-isito-ingress"
>
  <SplitItem>
    <ExclamationCircleIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      style={
        Object {
          "color": "var(--pf-global--danger-color--100)",
          "marginTop": 5,
        }
      }
    />
  </SplitItem>
  <SplitItem
    isFilled={true}
  >
    isito-ingress
  </SplitItem>
  <SplitItem>
    Not healthy
  </SplitItem>
</Split>
`;

exports[`IstioComponentStatus renders minus icon when addon component is not ready 1`] = `
<Split
  hasGutter={true}
  key="cell-status-icon-addon"
>
  <SplitItem>
    <MinusCircleIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      style={
        Object {
          "color": "var(--pf-global--info-color--100)",
          "marginTop": 5,
        }
      }
    />
  </SplitItem>
  <SplitItem
    isFilled={true}
  >
    addon
  </SplitItem>
  <SplitItem>
    Not ready
  </SplitItem>
</Split>
`;

exports[`IstioComponentStatus renders minus icon when core component is not ready 1`] = `
<Split
  hasGutter={true}
  key="cell-status-icon-core"
>
  <SplitItem>
    <MinusCircleIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      style={
        Object {
          "color": "var(--pf-global--info-color--100)",
          "marginTop": 5,
        }
      }
    />
  </SplitItem>
  <SplitItem
    isFilled={true}
  >
    core
  </SplitItem>
  <SplitItem>
    Not ready
  </SplitItem>
</Split>
`;

exports[`IstioComponentStatus renders success icon when core component is running 1`] = `
<Split
  hasGutter={true}
  key="cell-status-icon-isito-ingress"
>
  <SplitItem>
    <CheckCircleIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      style={
        Object {
          "color": "#3e8635",
          "marginTop": 5,
        }
      }
    />
  </SplitItem>
  <SplitItem
    isFilled={true}
  >
    isito-ingress
  </SplitItem>
  <SplitItem />
</Split>
`;

exports[`IstioComponentStatus renders success icon when core component is running 2`] = `
<Split
  hasGutter={true}
  key="cell-status-icon-prometheus"
>
  <SplitItem>
    <CheckCircleIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      style={
        Object {
          "color": "#3e8635",
          "marginTop": 5,
        }
      }
    />
  </SplitItem>
  <SplitItem
    isFilled={true}
  >
    prometheus
  </SplitItem>
  <SplitItem />
</Split>
`;

exports[`IstioComponentStatus renders warning icon when core component is not found 1`] = `
<Split
  hasGutter={true}
  key="cell-status-icon-prometheus"
>
  <SplitItem>
    <ExclamationTriangleIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      style={
        Object {
          "color": "var(--pf-global--warning-color--100)",
          "marginTop": 5,
        }
      }
    />
  </SplitItem>
  <SplitItem
    isFilled={true}
  >
    prometheus
  </SplitItem>
  <SplitItem>
    Not found
  </SplitItem>
</Split>
`;

exports[`IstioComponentStatus renders warning icon when core component is not running 1`] = `
<Split
  hasGutter={true}
  key="cell-status-icon-prometheus"
>
  <SplitItem>
    <ExclamationTriangleIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      style={
        Object {
          "color": "var(--pf-global--warning-color--100)",
          "marginTop": 5,
        }
      }
    />
  </SplitItem>
  <SplitItem
    isFilled={true}
  >
    prometheus
  </SplitItem>
  <SplitItem>
    Not healthy
  </SplitItem>
</Split>
`;
